// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`css function > Snapshot tests > basic usage should match snapshot 1`] = `

.kuma-3383855968 {color:red;}

const style = "kuma-3383855968";
export {};

`;

exports[`css function > Snapshot tests > using pseudo elements should match snapshot 1`] = `

.kuma-1234644783 {}.kuma-1234644783:after{color:blue;}

const style = "kuma-1234644783";
export {};

`;

exports[`css function > Snapshot tests > using pseudo props should match snapshot 1`] = `

.kuma-1234644783 {}.kuma-1234644783:hover{color:red;}

const style = "kuma-1234644783";
export {};

`;

exports[`css function > Snapshot tests > using space props should match snapshot 1`] = `

.kuma-110275621 {padding:2px;}

const style = "kuma-110275621";
export {};

`;
